--- a/_posts/2023-07-13-test.md
+++ b/_posts/2023-07-13-test.md
@@ -5,6 +5,8 @@ tag : Python
 # 복수로 하려면 [Python, Blog]처럼 리스트 형태로 할당
 toc : true
 # toc순서는 markdown header(#) 기준 입니당
+toc_sticky : true
+toc_label : true
 author_profile : false
 ---
 
