--- a/_posts/2023-07-14-LaTeX.md
+++ b/_posts/2023-07-14-LaTeX.md
@@ -1,7 +1,7 @@
 ---
-title:  "test post!"
-categories : Coding
-tag : Python
+title:  "Test LaTeX"
+categories : Math
+tag : Mathematical Statistics
 # 복수로 하려면 [Python, Blog]처럼 리스트 형태로 할당
 toc : true
 # toc순서는 markdown header(#) 기준 입니당
@@ -9,6 +9,7 @@ toc_sticky : true
 toc_label : Content
 toc_icon : "fas fa-book-open"
 author_profile : false
+use_math : true
 ---
 
 **[Notification]** 
@@ -16,10 +17,9 @@ author_profile : false
 <u>Hello world!, I'm going to read the contents and papers I'm studying and record them here!</u>
 {: .notice--success}
 
-# test
+# Test
 
-**Hello world**, this is my first Jekyll blog post.
+## LaTeX Test
+$$ \oint_{C} \vec{F} \cdot d\vec{s} $$
+$$ \lim_{n \to \infty} \sum_{k = 1}^{n} \dfrac{1}{k} $$
 
-```python
-print("Test Code")
-```
