--- a/_posts/2024-02-13-heap.md
+++ b/_posts/2024-02-13-heap.md
@@ -109,11 +109,11 @@ for i in cmd:
         hq.heappush(min_heap,i) # insert
 ```
 
-### 4.1 백준 11279번
-#### 4.1.1 문제
+### 4.2 백준 11279번
+#### 4.2.1 문제
 ![최대 힙](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/ecfb8b97-ebfd-4491-822b-ad831eed0eb8)
 
-#### 4.1.2 해답
+#### 4.2.2 해답
 ```python
 import heapq as hq
 import sys
@@ -135,11 +135,11 @@ for i in cmd:
         hq.heappush(max_heap,(-i,i)) # 음수를 통해 max heapify
 ```
 
-### 4.1 백준 11286번
-#### 4.1.1 문제
+### 4.3 백준 11286번
+#### 4.3.1 문제
 ![절대 힙](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/ed297830-c103-4c26-8dcc-7612e794f07b)
 
-#### 4.1.2 해답
+#### 4.3.2 해답
 ```python
 import heapq as hq
 import sys
@@ -161,3 +161,43 @@ for i in cmd:
     else:
         hq.heappush(abs_hq,(abs(i),i)) # 절대값 heapify
 ```
+
+
+### 4.4 백준 2075번
+#### 4.4.1 문제
+![N번째 큰수](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/14a50da0-36e4-4a4b-ac36-0e278907b820)
+
+#### 4.4.2 해답
+```python
+import sys
+import heapq as hq
+input = sys.stdin.readline
+n=int(input())
+hqa = []
+hq.heapify(hqa)
+for i in range(n):
+    data =list(map(int, input().split()))
+    if len(hqa)==0:
+        for num in data:
+            hq.heappush(hqa,num)
+    else:
+        for num in data:
+            hq.heappushpop(hqa,num)
+print(hqa[0])
+```
+#### 4.4.3 추가 해설
+- 1차 접근
+    - n번 째 큰 수이므로, max_heap으로 n번째 출력시도
+    - 그러나 메모리 제한이 12MB이므로 메모리 초과 예상
+
+- 2차 접근
+    - 메모리 효율성을 위해 heap의 최대 크기를 n으로 설정
+    - min heap 구성한 후 n크기 유지하며 첫번 째 값 출력
+    - Process
+        - 1행의 data는 그대로 min heap에 push
+        - 2행부터
+            - min value(root node 제거)
+            - new data psuh
+            - 반복
+            - 이전 행보다 다음 행의 값이 더 크므로, 적어도 한 개 이상 제거 가능에서 출발한 관점
+        - heap의 첫번 째 값  출력
