--- a/_posts/2024-02-16-BFS.md
+++ b/_posts/2024-02-16-BFS.md
@@ -35,6 +35,43 @@ use_math : true
 ### BFS
 ```python
 from collections import deque
+
+def bfs(node): 
+    a=deque([node]) # 초기 노드를 큐에 push
+    state[node] = 1 # 방문 처리
+    while len(a): # 큐가 빌때까지
+        node = a.popleft() # 큐에서 처음 들어온 노드 제거
+        ans_2.append(node) # 제거 후 출력 순서를 보여주기 위해 ans에 방문된 node 추가
+        for nxt in graph[node]: # 관련된 다른 node
+            if state[nxt]==0: # 방문하지 않은 노드일 경우
+                a.append(nxt) # 큐에 추가하고
+                state[nxt]=1 # 방문 처리
+
+n,m = map(int, input().split()) # n은 노드 개수, m은 간선
+graph =[[] for i in range(n+1)] #
+ans_2=[]
+for i in range(m):
+    a,b=map(int,input().split())
+    graph[a].append(b)
+    graph[b].append(a)
+
+state = [0 for i in range(n+1)] 
+bfs(1) # 탐색
+print(*ans_2) # 결과 출력
+
+
+
+```
+
+## 4. Example
+
+### 4.1 백준 2178번
+#### 4.1.1 문제
+![img](https://github.com/SEUNGYEOPOH/CV/assets/81912557/a56d700b-83a3-4bce-9dab-50e1a5008b68)
+
+#### 4.1.2 해답
+```python
+from collections import deque
 n, m = map(int,input().split())
 board=[]
 for i in range(n):
@@ -61,38 +98,6 @@ while arr :
         # 좌표 값의 값을 가중하며 거리 계산
         board[nx][ny] = board[px][py]+1 # 직전 노드+1
 # 가중된 거리에 따라 마지막 좌표 return
-print(board[n-1][m-1])
-```
-
-## 4. Example
-
-### 4.1 백준 2178번
-#### 4.1.1 문제
-![img](https://github.com/SEUNGYEOPOH/CV/assets/81912557/a56d700b-83a3-4bce-9dab-50e1a5008b68)
-
-#### 4.1.2 해답
-```python
-from collections import deque
-n, m = map(int,input().split())
-board=[]
-for i in range(n):
-    board.append(list(map(int,input())))
-dx = [-1,1,0,0]
-dy = [0,0,-1,1]
-
-arr = deque()
-arr.append([0,0])
-
-while arr :
-  px, py = arr.popleft()
-  for i in range(len(dx)):
-    nx = px+dx[i]
-    ny = py+dy[i]
-    if nx>n-1 or ny>m-1 or nx<0 or ny<0 :
-        continue
-    if board[nx][ny]==1:
-        arr.append((nx,ny))
-        board[nx][ny] = board[px][py]+1 
 print(board[n-1][m-1])
 ```
 
