add a DFS, BFS Files

--- a/_posts/2023-12-28-Algorithm1.md
+++ b/_posts/2023-12-28-Algorithm1.md
@@ -30,7 +30,7 @@ use_math : true
 
 ## 3. Example
 
-### 3.1 백준 1816번
+### 3.1 BOJ 1816번 암호 키
 
 #### 3.1.1 문제
 ![image](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/9c26771f-73ef-46dd-97b1-20211801f9d4)
@@ -62,7 +62,7 @@ for i in ans:
     print(i) # 정답 출력
 ```
 
-### 3.2 백준 14568번
+### 3.2 BOJ 2017 연세대학교 프로그래밍 경시대회
 #### 3.2.1 문제
 ![image](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/4fd0bcf5-a673-4645-945a-bc4244585ed9)
 
