--- a/_posts/2024-01-05-DFS.md
+++ b/_posts/2024-01-05-DFS.md
@@ -76,7 +76,7 @@ print(state) # 방문된 노드 출력
 
 ## 4. Example
 
-### 4.1 백준 24479번
+### 4.1 BOJ 24479번 알고리즘 수업 - 깊이 우선 탐색 1
 #### 4.1.1 문제
 ![screencapture-acmicpc-net-problem-24479-2024-01-07-01_01_09](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/da846d57-b18a-49d7-bdb2-73982099bfcc)
 
@@ -112,7 +112,7 @@ recur(r)
 for ans in range(1,len(state)):
     print(state[ans])
 ```
-### 4.2 백준 24480번
+### 4.2 BOJ 24480번 알고리즘 수업 - 깊이 우선 탐색 2
 
 #### 4.2.1 문제
 ![screencapture-acmicpc-net-problem-24480-2024-01-07-01_02_22](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/ea8cf7b0-cda3-4621-9810-b914a487c105)
@@ -149,7 +149,7 @@ recur(r)
 for ans in range(1,len(state)):
     print(state[ans])
 ```
-### 4.3 백준 2606번
+### 4.3 BOJ 2606번 바이러스
 
 #### 4.3.1 문제
 ![screencapture-acmicpc-net-problem-2606-2024-01-07-01_04_12](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/9a5c533b-563e-45ef-9800-2363ed7cbd26)
@@ -187,7 +187,7 @@ for ans in range(1,len(state)):
     print(state[ans])
 ```
 
-### 4.4 백준 2644번
+### 4.4 BOJ 2644번 촌수계산
 #### 4.4.1 문제
 ![screencapture-acmicpc-net-problem-2644-2024-01-07-01_05_36](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/1cee3c1b-4753-4b5b-a5ca-ba2d6d52c301)
 #### 4.4.2 해답
@@ -229,7 +229,7 @@ else:
     print(-1)
 ```
 
-### 4.5 백준 2644번
+### 4.5 BOJ 11724번 연결요소의 개수
 #### 4.5.1 문제
 ![screencapture-acmicpc-net-problem-11724-2024-02-25-02_15_56](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/d437bc16-106d-4956-b96f-afb5ae746aab)
 
