--- a/_posts/2024-02-13-heap.md
+++ b/_posts/2024-02-13-heap.md
@@ -85,7 +85,7 @@ print(mval)
 
 ## 4. Example
 
-### 4.1 백준 1927번
+### 4.1 BOJ 1927번 최소 힙
 #### 4.1.1 문제
 ![1927](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/455f21c0-af04-4494-b070-b16c8c8f43b4)
 
@@ -111,7 +111,7 @@ for i in cmd:
         hq.heappush(min_heap,i) # insert
 ```
 
-### 4.2 백준 11279번
+### 4.2 BOJ 11279번 최대 힙
 #### 4.2.1 문제
 ![최대 힙](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/ecfb8b97-ebfd-4491-822b-ad831eed0eb8)
 
@@ -137,7 +137,7 @@ for i in cmd:
         hq.heappush(max_heap,(-i,i)) # 음수를 통해 max heapify
 ```
 
-### 4.3 백준 11286번
+### 4.3 BOJ 11286번 절댓값 힙
 #### 4.3.1 문제
 ![절대 힙](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/ed297830-c103-4c26-8dcc-7612e794f07b)
 
@@ -165,7 +165,7 @@ for i in cmd:
 ```
 
 
-### 4.4 백준 2075번
+### 4.4 BOJ 2075번 N번째 큰 수
 #### 4.4.1 문제
 ![N번째 큰수](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/14a50da0-36e4-4a4b-ac36-0e278907b820)
 
