--- a/_posts/2024-02-16-BFS.md
+++ b/_posts/2024-02-16-BFS.md
@@ -24,7 +24,7 @@ use_math : true
     - 최단거리(경로) 해결에 효과적
 
 
-<p align="center"><img src = "https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/a63f11de-ced2-44ed-bd0b-638af9bb68e3" width = "50%" height = "50%" ></p>
+<p align="center"><img src = "https://upload.wikimedia.org/wikipedia/commons/5/5d/Breadth-First-Search-Algorithm.gif?20100504223639" width = "50%" height = "50%" ></p>
 
 ## 2. How to Use?
 - Queue(FIFO)를 활용하여 구현
@@ -65,11 +65,93 @@ print(*ans_2) # 결과 출력
 
 ## 4. Example
 
-### 4.1 백준 2178번
+
+### 4.1 BOJ 18352번 특정 거리의 도시 찾기
 #### 4.1.1 문제
-![img](https://github.com/SEUNGYEOPOH/CV/assets/81912557/a56d700b-83a3-4bce-9dab-50e1a5008b68)
+![img](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/3f503fec-2742-4114-8137-7803c3df6d0d)
+
 
 #### 4.1.2 해답
+```python
+from collections import deque
+import sys
+input = sys.stdin.readline
+n,m,k,x = map(int, input().split())
+graph = [[] for i in range(n+1)]
+state = [-1 for j in range(n+1)]
+for i in range(m):
+    a,b = map(int, input().split()) # 단방향 그래프 구현을 위해 한 노드에서만 갈 수 있도록
+    graph[a].append(b)
+
+for j in range(len(graph)):
+    graph[j] = sorted(graph[j]) # 정렬 
+    
+def bfs(node):
+    ans = []
+    a=deque([node])
+    state[node] = 1 # 스타트를 1로, count로 올리면 순서가 되어버리므로, 현재 노드의 거리를 다음 노드의 +1씩 더해주며 depth 계산
+    while len(a):
+        node = a.popleft()
+        for nxt in graph[node]:
+            if state[nxt]==-1:
+                a.append(nxt)
+                state[nxt]=state[node]+1
+                if state[nxt]-1==k: # start를 1로 잡았으므로, -1한 값이 최단거리와 동일한 경우
+                    ans.append(nxt) # 정답 리스트에 추가하기
+            else:
+                continue
+    return ans
+ans = bfs(x)
+ans = sorted(ans) # 오름차순
+if len(ans)==0: # return 값이 없다면 -1
+    print(-1)
+else:
+    for i in ans: # 있다면 출력
+        print(i)
+```
+
+
+### 4.2 BOJ 11725번 트리의 부모 찾기
+#### 4.2.1 문제
+![img](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/8094d76f-d4af-42ad-9e94-90e5a839914d)
+
+
+#### 4.2.2 해답
+```python
+from collections import deque
+import sys
+input = sys.stdin.readline
+m=int(input())
+graph = [[] for i in range(m+1)]
+state = [False for j in range(m+1)]
+for i in range(m-1):
+    a,b = map(int, input().split())
+    graph[a].append(b)
+    graph[b].append(a)
+    
+for i in range(len(graph)):
+    graph[i] = sorted(graph[i])
+def bfs(node):
+    a=deque([node])
+    ans = []
+    state[node] = True
+    while len(a):
+        node = a.popleft()
+        for nxt in graph[node]: # nxt는 node의 자식노드
+            if state[nxt]==False:
+                a.append(nxt) 
+                state[nxt]=node # 자식노드의 State는 부모노드로 insert하여 출력
+bfs(1)
+for i in range(2,m+1):
+    print(state[i])
+```
+
+
+### 4.3 BOJ 2178번 미로 탐색
+#### 4.3.1 문제
+![img](https://github.com/SEUNGYEOPOH/CV/assets/81912557/a56d700b-83a3-4bce-9dab-50e1a5008b68)
+
+#### 4.3.2 해답
 ```python
 from collections import deque
 n, m = map(int,input().split())
@@ -100,5 +182,3 @@ while arr :
 # 가중된 거리에 따라 마지막 좌표 return
 print(board[n-1][m-1])
 ```
-
-### 4.2 백준 1260번
