--- a/_posts/2024-02-25-DFS&BFS 응용.md
+++ b/_posts/2024-02-25-DFS&BFS 응용.md
@@ -14,7 +14,7 @@ use_math : true
 
 # 1. DFS 문제
 
-## 1.1 BOJ 1012번
+## 1.1 BOJ 1012번 유기농 배추
 ![screencapture-acmicpc-net-problem-1012-2024-02-25-16_11_18](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/d44801fa-8923-4c5b-a944-db4ee574e1d0)
 
 ### 1.1.1 구조화
@@ -66,6 +66,7 @@ for i in range(n):
 ```
 
 ## 1.2 BOJ 1260번 DFS와 BFS
+![screencapture-acmicpc-net-problem-1260-2024-02-26-01_24_02](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/fa8d0144-d53e-4b27-956a-a86b8c335173)
 
 ### 1.2.1 구조화
 - 단순한 DFS, BFS 구현
@@ -117,6 +118,61 @@ bfs(l) # 입력된 l노드부터 탐색
 print(*ans) # dfs 출력
 print(*ans_2) # bfs 출력
                 
+```
+
+
+## 1.3 BOJ 4963번 섬의 개수
+![screencapture-acmicpc-net-problem-4963-2024-02-27-17_10_44](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/3f4fb448-7767-430f-85f7-d1e73b53ee50)
+
+
+### 1.3.1 구조화
+- 단순한 DFS 문제
+- 단, 방향이 대각이동이 가능한 case
+- 미로탐색, 2차원에서 중요한 point
+    - 입력은 w,h 여기서 w는 가로, h는 세로
+    - dfs(x,y) 형태 호출 시 x는 가로 길이(w 집합), y는 세로(h 집합) 길이와 관련
+    - 2차원 배열의 행열이므로 board indexing은 [y][x]로 
+
+### 1.3.2 코드
+```python
+import sys
+sys.setrecursionlimit(10**6)
+dx = [-1, -1, -1, 0, 0, 1, 1, 1]
+dy = [-1, 0, 1, -1, 1, -1, 0, 1]
+
+def dfs(x,y):
+    if x>=w or x<=-1 or y>=h or y<=-1: # 이동 불가능하면 return False
+        return False
+    
+    if board[y][x]==1: # 이동 가능한 지점
+        board[y][x]=0 # 방문 표시
+        for p in range(8):
+            new_x = x+dx[p] # 4방향에 대해
+            new_y = y+dy[p]
+            dfs(new_x, new_y) # 이동
+            
+        return True # 이동 후 True
+
+    return False 
+    
+
+while True:
+    w,h = map(int, input().split())
+    if w==0 and h==0:
+        break
+    else:
+        board = []
+        dx = [-1, -1, -1, 0, 0, 1, 1, 1]
+        dy = [-1, 0, 1, -1, 1, -1, 0, 1]
+        for i in range(h):
+            data = list(map(int, input().split()))
+            board.append(data)
+        count = 0
+        for c in range(h):
+            for p in range(w):
+                if dfs(p,c):
+                    count+=1
+        print(count)
 ```
 
 # 2. BFS 문제
