add a new files

--- a/_posts/2024-02-16-BFS.md
+++ b/_posts/2024-02-16-BFS.md
@@ -182,3 +182,33 @@ while arr :
 # 가중된 거리에 따라 마지막 좌표 return
 print(board[n-1][m-1])
 ```
+
+
+### 4.4 BOJ 1697번 숨바꼭질
+#### 4.4.1 문제
+![숨바꼭질](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/3fe26a97-b4f2-4da3-acf7-4fc287e00636)
+
+
+#### 4.4.2 해답
+```python
+from collections import deque
+import sys
+input = sys.stdin.readline
+n,k = map(int, input().split()) # n은 start, k는 목표 지점
+data = [0 for i in range(100001)] # 최대 10만개
+a=deque([n]) # start 지점 큐에 추가
+ans=[]
+def bfs(): 
+    while len(a):
+        node = a.popleft() 
+        if node==k: # 만약 노드의 값이 목표 지점이라면
+            ans.append(data[node]) # 정답에 추가
+            break
+        for nxt in (node-1, node+1, node*2): # 움직일 수 있는 방향은 총 3가지
+            if nxt >= 0 and nxt <= len(data)-1: # 이동 가능 영역인 경우
+                if data[nxt]==0: # 아직 방문하지 않았다면
+                    data[nxt] = data[node]+1 # 1초가 지났음을 추가
+                    a.append(nxt) 
+bfs()
+print(min(ans))
+```
