--- a/_posts/2024-02-25-DFS&BFS 응용.md
+++ b/_posts/2024-02-25-DFS&BFS 응용.md
@@ -176,3 +176,161 @@ while True:
 ```
 
 # 2. BFS 문제
+
+## 2.1 BOJ 14940번 쉬운 최단 거리
+![쉬운 최단 거리](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/4a35d2cf-7085-481e-b66e-560bdc041fdf)
+
+### 2.1.1 구조화
+- n은 세로(y), m은 가로(x)
+- 탐색할 지도 좌표 생성
+- 좌표에서 값이 0일 경우 갈 수 없음, 1일 경우 갈 수 있고, 2일 경우는 목표지점
+- 갈 수 있는 좌표 중 각 좌표에서 목표지점까지의 거리를 구하는 문제
+- 좌표의 값이 2인 지점이 start point
+- 이를 위해 지도의 좌표를 입력받은 후 값이 2인 좌표를 큐에 추가
+- 순회 시 인덱싱은 [y][x] 형태
+- BFS로 탐색하되, 이동은 4방향으로 가능
+- 초기 좌표가 2인 지점을 기준으로 BFS 탐색
+- 현재 좌표에서 이동 가능 공간(좌표를 벗어나지 않고)임과 동시에, 좌표의 값이 0이 아닌 좌표일 경우 이전 좌표의 값에 +1씩 하며 탐색
+- 시작 값이 2이므로, 탐색 후 각 좌표 값에서 2를 뺴주되, 0인 경우 이동할 수 없는 좌표이므로 Continue
+
+### 2.1.2 코드
+```python
+# 1은 갈 수 있는 땅, 0은 갈 수 없는 땅, 2는 목표 지점
+# n은 세로 크기, m은 가로 크기
+from collections import deque
+import sys
+input = sys.stdin.readline
+n,m = map(int, input().split()) # n은 y m은 x
+mapper = []
+for i in range(n):
+    mapper.append(list(map(int, input().split())))
+dx=(0,0,-1,1) # x 이동 가능 영역
+dy=(1,-1,0,0) # y 이동 가능 영역
+a=deque()
+for y in range(n):
+    for x in range(m):
+        if mapper[y][x]==2:
+            a.append([y,x]) # 좌표가 2인 경우 큐에 추가하여 Start Point로 지정
+def bfs():
+    while len(a):
+        y,x = a.popleft() # init은 목표 지점인 2에서부터 시작
+        for i in range(4): 
+            new_x = x+dx[i] # 이동 가능한 x좌표
+            new_y = y+dy[i] # 이동 가능한 y좌표
+            if new_x>=m or new_y >=n or new_x<=-1 or new_y <= -1: # 보드의 크기를 벗어나면 continue
+                continue
+            else:
+                if mapper[new_y][new_x]==1: # 현재지점에서 이동가능한 좌표가 1일 경우
+                    mapper[new_y][new_x] = mapper[y][x]+1 # 이전 좌표값에 1을 더하여 거리 계산
+                    a.append([new_y,new_x]) # 이동 가능한 공간을 다시 큐에 push
+bfs()
+for i in range(len(mapper)):
+    for j in range(len(mapper[i])):
+        if mapper[i][j]==0: # 좌표 값이 0인 경우는 이동 불가능하므로 continue
+            continue
+        else:
+            mapper[i][j]= mapper[i][j]-2 # 초기 시작 지점이 2이므로, 모두 -2하여 출력
+for c in mapper:
+    print(*c)
+```
+
+
+
+## 2.2 BOJ 7576번 토마토
+![도마도]](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/92e3f71b-0172-450f-a69a-261fc334c4dc)
+
+### 2.2.1 구조화
+- 앞 선 문제와 유사함.
+- 탐색할 토마토 좌표 생성
+- 익은 토마토는 1, 안익은 토마토는 0
+- 익은 토마토가 안익은 토마토에게 영향을 주므로, 시작 지점은 이미 익어있는 토마토
+- 이를 위해 토마토들의 좌표를 입력받은 후 값이 1인 토마토의 좌표를 큐에 추가
+- 순회 시 인덱싱은 [y][x] 형태
+- BFS로 탐색하되, 이동은 4방향으로 가능
+- 초기 좌표가 1인 토마토를 기준으로 BFS 탐색
+- 현재 좌표가 1이고, 이동 가능 공간의 좌표가 0일 경우 1씩 증가하여 tomato 값 수정
+- start가 1이므로 -1하여 출력
+
+
+### 2.2.2 코드
+```python
+from collections import deque
+import sys
+input = sys.stdin.readline
+m,n = map(int, input().split())
+tomato = []
+a=deque()
+for i in range(n):
+    data = list(map(int, input().split())) 
+    tomato.append(data)
+for i in range(n): # y
+    for j in range(m): # x
+        if tomato[i][j]==1:
+            a.append([i,j]) # 미리 다른 지점의 영향을 끼치는 익은 토마토의 위치를 큐에 저장
+            
+dx=(0,0,-1,1) # x 이동 가능 영역
+dy=(1,-1,0,0) # y 이동 가능 영역
+def bfs():
+    while len(a): 
+        y,x = a.popleft() # 익은 토마토인 1의 좌표를 기준으로 BFS 시작
+        for i in range(4):
+            new_x = x+dx[i] # 이동 가능한 x좌표
+            new_y = y+dy[i] # 이동 가능한 y좌표
+            if new_x>=m or new_y >=n or new_x<=-1 or new_y <= -1: # 이동가능영역이 아닌 경우 밑에 코드 무시
+                continue
+            else:
+                if tomato[new_y][new_x]==0: # 이동 가능한 지점 중 아직 익지 않은 경우
+                    tomato[new_y][new_x] = tomato[y][x]+1 # 익은 토마토를 기점으로 1씩 추가
+                    a.append([new_y,new_x]) # 새로 익은 토마토의 좌표를 큐에 추가
+bfs()
+ans=0 # 정답 초기화
+for i in tomato:
+    if 0 in i: # 익지 않은 토마토가 존재한 경우 다 채울 수 없는 Case
+        ans=0 # 하루를 빼주기 떄문에 -1을 출력하기 위해 0대입 후 반복문 탈출
+        break
+    else:
+        ans = max(max(i),ans) # 다 채워진 토마토 판을 순회하며 max값 도출
+print(ans-1) # 시작 토마토의 값이 1이므로, 하루를 빼줘야 함.
+```
+
+## 2.3 BOJ 13549번 숨바꼭질 3
+![숨바꼭질 3](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/f62d5f84-8979-4c60-ab3e-b35efb3cdda8)
+
+
+### 2.3.1 구조화
+- BFS에서 풀었던 숨바꼭질 문제의 심화버전
+- 모든 조건은 동일하나, 순간이동의 경우 0초 추가
+- 단순히 조건을 걸어 해결하려 했으나, 시간초과 발생
+    - 최단거리 문제이므로, 0초 이동 선택지는 최우선순위로 큐에 추가(appendleft)
+    - 순간이동이 0초이므로, 초기화를 0으로 했다면 중복으로 인해 시간초과 발생
+- 이후 -1로 초기화 후 진행하여 문제 해결
+
+
+### 2.3.3 코드
+```python
+from collections import deque
+import sys
+input = sys.stdin.readline
+n,k = map(int, input().split())
+data = [-1 for i in range(100001)] # 최대 범위, 0으로 초기화한다면, 방문 가능 여부에서 순간 이동 시 중복으로 인해, 시간초과 발생. -1로 초기화
+a=deque([n]) # 추가
+data[n]=0
+ans=[]
+def bfs():
+    while len(a):
+        node = a.popleft()
+        if node==k:
+            ans.append(data[node])
+        for nxt in (node-1, node+1, node*2): # 이동 가능 영역
+            if nxt >= 0 and nxt <= len(data)-1:
+                if nxt==node*2: # 순간이동을 진행했을 때
+                    if data[nxt]==-1: # 방문하지 않은 경우
+                        data[nxt] = data[node] # 0초 추가
+                        a.appendleft(nxt) # 최단거리 문제이므로, 0초가 우선으로 큐에 추가
+                else:
+                    if data[nxt]==-1: # 일반적인 이동일 경우
+                        data[nxt] = data[node]+1 # 1초 추가
+                        a.append(nxt)
+bfs()
+print(min(ans))
+```
