modify file format

--- a/_posts/2024-02-25-DFS&BFS 응용.md
+++ b/_posts/2024-02-25-DFS&BFS 응용.md
@@ -237,7 +237,7 @@ for c in mapper:
 
 
 ## 2.2 BOJ 7576번 토마토
-![도마도]](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/92e3f71b-0172-450f-a69a-261fc334c4dc)
+![도마도](https://github.com/SEUNGYEOPOH/SEUNGYEOPOH/assets/81912557/92e3f71b-0172-450f-a69a-261fc334c4dc)
 
 ### 2.2.1 구조화
 - 앞 선 문제와 유사함.
