modify file format

--- a/_posts/2024-02-18-BFS-18352.md
+++ b/_posts/2024-02-18-BFS-18352.md
@@ -12,7 +12,7 @@ author_profile : false
 use_math : true
 ---
 
-# Breadth-First Search Practice
+# Breadth First Search
 
 ## BOJ 18352번 특정 거리의 도시 찾기
 
