modify format & struct

--- a/_posts/2024-08-29-BFS-14502.md
+++ b/_posts/2024-08-29-BFS-14502.md
@@ -1,6 +1,7 @@
 ---
 title:  "[BOJ 14502] 연구소"
 categories : Algorithm
+published: true
 tag : BFS
 # 복수로 하려면 [Python, Blog]처럼 리스트 형태로 할당
 toc : true
