--- a/_posts/2024-08-29-DFS-11403.md
+++ b/_posts/2024-08-29-DFS-11403.md
@@ -1,6 +1,7 @@
 ---
 title:  "[BOJ 11403] 경로 찾기"
 categories : Algorithm
+published: true
 tag : DFS
 # 복수로 하려면 [Python, Blog]처럼 리스트 형태로 할당
 toc : true
@@ -17,7 +18,7 @@ use_math : true
 ## [BOJ 11403] 경로 찾기
 
 ### 문제
-![screencapture-acmicpc-net-problem-2644-2024-01-07-01_05_36](https://github.com/user-attachments/assets/4a11944a-e736-4aa3-995f-6759bbb9873f)
+![img](https://github.com/user-attachments/assets/4a11944a-e736-4aa3-995f-6759bbb9873f)
 
 ### 구조화
 - 초기 접근
