--- a/_posts/2024-12-20-Resnet50.md
+++ b/_posts/2024-12-20-Resnet50.md
@@ -172,6 +172,12 @@ model.summary()
 
 - 실제 Layer에는 Batch normalization이 추가된 형태
 - 이를 참고하여, ResNet-50을 torch, tensorflow 별로 구현 
+- Resnet의 경우 일정한 BottleNeck Block이 반복되는 형태
+  - Block이 바뀔 경우 Dimension이 달라짐
+    - Ex. Conv2 -> Conv3
+  - 이의 경우 Skip-Connection 간 Projection Shortcut을 통해 Dimension 통일
+    - Conv2 -> Conv2 : identity_block
+    - Conv2 -> Conv3 : convolutional_block
 
 ## 6. ResNet-50 구현
 
@@ -294,7 +300,7 @@ class IdentityBlock(nn.Module):
         super(IdentityBlock, self).__init__()
         f1, f2, f3 = filters
 
-        self.conv1 = nn.Conv2d(in_channels, f1, kernel_size=1, stride=1, padding=0, bias=False)
+        self.conv1 = nn.Conv2d(in_channels, f1, nkernel_size=1, stride=1, padding=0, bias=False)
         self.bn1 = nn.BatchNorm2d(f1)
 
         self.conv2 = nn.Conv2d(f1, f2, kernel_size=3, stride=1, padding=1, bias=False)
