--- a/_posts/2024-12-22-Pruning.md
+++ b/_posts/2024-12-22-Pruning.md
@@ -186,7 +186,110 @@ print(
 )
 
 ``` 
-## 6. Torch-Pruning(framework for structural pruning)
-- To be updated
+## 6. Limitations of Sparsity Pruning
+<p align="center">
+  <img src="https://github.com/user-attachments/assets/0447ced4-2530-41a3-a856-d386fb37b382" width=900 height=500 alt="Example Image">
+</p>
+
+- Sparsity Pruning은 Weight를 0으로 만들기에, 연산량 감소에는 효과적.
+- 그러나, Parameter를 제거하는 것은 아니기에, Size와 관련있는 Parameter의 개수를 줄일 수는 X
+- 실제 Parameter의 개수를 줄일 수 있는 방안들이 제시됨.
+  - Ex. Channel Pruning
+    - Convolution 기반 Network의 Channel을 줄여 연산량을 감소시키는 방식. 
+
+## 7. Torch-Pruning(framework for structural pruning)
+- Torch-Pruning은 CVPR'2023에 제시된 DepGraph를 기반으로 Pruning을 제공하는 structural pruning framework
+- MetaPruner, Channel 등 다양한 hi-level Pruner를 제공
+- 해당 Framework를 사용해 Resnet의 Parameter의 개수를 줄여보자.
+
+### 7.1 Load DataSets(CIFAR-10)
+ ```python
+import torch
+from torchvision import datasets, transforms
+
+transform = transforms.Compose([
+    transforms.ToTensor(),
+    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))
+])
+
+testset = datasets.CIFAR10(root='./data', train=False, download=True, transform=transform)
+
+testloader = torch.utils.data.DataLoader(testset, batch_size=1, shuffle=False)
+
+for images, labels in testloader:
+    print(images.shape)
+    print(labels.shape)
+    break
+    
+example_inputs = images[0:1].to(device)
+
+``` 
+
+
+### 7.2 Load Resnet-18 
+ ```python
+import torch
+import torchvision.models as models
+from torchsummary import summary
+
+device = torch.device("cuda" if torch.cuda.is_available() else "cpu")
+
+resnet18 = models.resnet18(pretrained=True).to(device = device)
+
+summary(resnet18, (3, 224, 224))
+
+
+def count_parameters(model):
+    return sum(p.numel() for p in model.parameters() if p.requires_grad)
+
+
+print(f"Total trainable parameters: {count_parameters(resnet18)}")
+
+``` 
+
+
+### 7.3 Define Torch-Pruning Params
+ ```python
+# !pip install torch-pruning
+import torch_pruning as tp
+
+# 1. 중요도 기준 정의. p=1 -> L1 Norm, p=2 -> L2 Norm
+imp = tp.importance.GroupNormImportance(p=2) 
+
+ignored_layers = []
+for m in resnet18.modules():
+    if isinstance(m, torch.nn.Linear) and m.out_features == 1000: # Dense Layer의 경우 Pruning 시 output 출력에 영향을 끼치므로 배제.
+        ignored_layers.append(m)
+
+pruner = tp.pruner.MetaPruner(
+    resnet18,
+    example_inputs,
+    importance=imp,
+    pruning_ratio=0.5, # Channel Pruning 비율. 즉 0.5의 경우 256 Channel은 128로 변환
+    ignored_layers=ignored_layers,
+    round_to=8, # 채널의 배수를 조정 즉, 4의 경우 4의 배수로, 8의 경우 8의 배수로 / 이를 통해 GPU 연산 최적화.
+)
+``` 
+### 7.4 Pruning
+ ```python
+base_macs, base_nparams = tp.utils.count_ops_and_params(resnet18, example_inputs)
+pruner.step()
+macs, nparams = tp.utils.count_ops_and_params(resnet18, example_inputs)
+print(f"MACs: {base_macs/1e9} G -> {macs/1e9} G, #Params: {base_nparams/1e6} M -> {nparams/1e6} M")
+
+summary(resnet18, (3, 224, 224))
+``` 
+
+### 7.5 Tabel
+
+| Model             | MACs(G) | Params(M) | Size(mb) |
+|-------------------|---------|-----------|----------|
+| resnet-18         | 0.0102  | 3.0559    | 107.9600 |
+| pruning resnet-18 | 0.0029  | 0.8311    | 19.4500  |
+
+
+
+
+
 
 
